;(executable
;  (name toadmlc)
;  (libraries CSC)
;  (modes exe byte)
;  (flags (:standard -g -w 42))
;  )
(coq.theory
  (name CSC)
  (package coq-compositional-secure-compilation)
  (coqdoc_flags (:standard --toc --toc-depth 2 --html --interpolate --index indexpage --no-lib-name --parse-comments --with-header extra/header.html --with-footer extra/footer.html))
  (theories RecordUpdate MenhirLib)
  )
(include_subdirs qualified)
